# tpv-el-haido2

./: .dockerignore  .env  .env.docker.example  .env.example  .gitignore  CLAUDE.md  Cross.toml  Dockerfile  Dockerfile.aarch64  LICENSE-MASTER.txt  LICENSE_SYSTEM_RESEARCH.md  README.md  RPi-Build-Documentation.md  biome.json  components.json  docker-compose.coolify.yml  docker-compose.yml  errors.txt  eslint.config.js  generate-docs.ts  index.html  package-lock.json  package.json  rpi-builder-cli.tsx  rpi-explorer.ts  tailwind.config.js  tauri-signing.pub  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1755595390512-a562e6b0de12f.mjs  vite_errors.txt
.claude/: settings.local.json
.github/workflows/: linux-x64-deploy.yml  rpi-deploy.yml
apps/haidodocs/: .dockerignore  .env  .env.example  CLAUDE.md  Dockerfile  LICENSE  MUST-FOLLOW-GUIDELINES.md  README.md  next.config.mjs  nginx.conf  oxlint.json  (+3 more)
docs/: TECHNICAL.md  screenshot-system-implementation.md
public/: App.css  manifest.json  sw.js
releases/: README.md
screenshots/: README.md
scripts/: build-aeat-sidecar.ts  build-pwa.ts  prebuild-sidecars.ts  seed.ts
sidecars/: .gitkeep
src/: App.css  App.tsx  main 2.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  lib.rs  license.rs  main.rs  models.rs  screenshot.rs
src-tauri/src/models/: license.rs
tauri-keys/: tpv-el-haido.key  tpv-el-haido.key.pub
todo-plans/: README.md  pwa-architecture-plan.json  solidjs-migration-plan.md
(+418 files in other folders)
