[package]
name = "tpv-el-haido"
version = "0.1.0"
description = "TPV: El Haido - Point of Sale System"
authors = ["El Haido Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tpv_el_haido_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-http = "2.5.6"
tauri-plugin-shell = "2.3.4"
tauri-plugin-updater = "2.9.0"
tauri-plugin-process = "2.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"

